# model-mind-adventure

./: .gitignore  README.md  pyproject.toml  scenarios.json
.github/workflows/: ci.yml
src/model_mind_game/: __init__.py  game.py  llm_client.py  models.py  scenarios.py
tests/: test_integration.py  test_models.py  test_scenarios.py
