[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-mind-adventure"
version = "0.1.0"
description = "AI-assisted scene generation text game based on Model Thinking"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
model-mind = "model_mind_game.game:main"

[tool.hatch.build.targets.wheel]
packages = ["src/model_mind_game"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=model_mind_game --cov-report=term-missing"

[tool.coverage.run]
source = ["src/model_mind_game"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 120
target-version = ["py310"]
